Use users table for auth instead of OAuth

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -83,7 +83,7 @@
                 <div class="row banner-content">
                     <div class="banner-meta">
                         <h1>Reach People Faster</h1>
-                        <p class="lead">Use your current phone number to send and receive text messages from your web browser.</p>
+                        <p class="lead">Send and receive text messages from your web browser.</p>
                         <p>
                             <a href="/sign-up" class="btn btn-theme-primary hero-button">Start Texting</a>
                         </p>
